# dimmiouija

./: .gitignore  README.md  bot.py  clear_pmlist.py  dump.py  init_dump.sql  justfile  pyproject.toml  random_comment.py  requirements.txt  ruota.py  stats.md  summarizer.py  summary.py  wiki.md
.github/workflows/: python-app.yml
tests/: test_strings.py
