[project]
name = "DimmiOuija"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "graphemeu",
    "jinja2>=3.1.6",
    "praw",
]


[tool.ruff]
# Enable Pyflakes `E` and `F` codes by default.
lint.select = [
    "E",
    "F",
    "W",
    "I",
    "N",
    "UP",
    "B",
    "C4",
    "ISC",
    "G",
    "PIE",
    "PYI",
    "TCH",
    "PLE",
    "PLW",
]
lint.ignore = []
line-length = 100
